--- a/index.html
+++ b/index.html
@@ -21,20 +21,20 @@
             <div class="row">
                 <div class="six columns">
                     <label for="tweet">Tweet:</label>
-                    <form action="#" id="formulario">
+                    <form  id="formulario">
                             <label for="tweet"></label>
                             <textarea id="tweet" class="u-full-width"></textarea>
                             <input type="submit" class="button u-full-width button-primary" value="Agregar">
 
                             <br>
-                            <li>El usuario podra crear (ilimitadamente), elminar, ver sus tweets en un listado
+                            <!-- <li>El usuario podra crear (ilimitadamente), elminar, ver sus tweets en un listado
                                 que se almacenan en local storage
                             </li>
 
                             <li>
                                 Al cargar la pagina los tweets agregados se cargaran y si se eliminan se eliminara
                                 de local storage
-                            </li>
+                            </li> -->
 
                             <label>© Jonathangt</label>
                     </form>
